# BedtimeBuddy

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.continue/: config-yaml-schema.json
.continue/agents/: local-config.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
bedtimebuddy/: __init__.py  cli.py  config.py
bedtimebuddy/agents/: __init__.py  brain.py
bedtimebuddy/db/: __init__.py  models.py  session.py
bedtimebuddy/schemas/: __init__.py  story.py
bedtimebuddy/services/: ollama.py  story_persist.py  tenant.py
bedtimebuddy/skills/: __init__.py  story_build.py  web_research.py
bedtimebuddy/slack/: __init__.py  app.py  onboarding.py  story_flow.py
bedtimebuddy/utils/: duration.py  souls.py
souls/: _shared-safety.md  bedtime-brain.md  bedtime-story.md
